--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "javascript-core-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
-  "author": "vikas",
+  "author": "fruit-developer",
   "license": "ISC",
-  "description": ""
+  "description": "basic code",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
