--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "basic code",
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "prettier": "^3.3.3"
   }
 }
